[tool.poetry]
name = "messaging"
version = "0.1.0"
description = ""
authors = ["Fumito Ito <fumito.ito@nex.nikkei.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
google-api-python-client = "^2.139.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
